[gd_scene load_steps=68 format=2]

[ext_resource path="res://Scripts/Entity/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://sprites/main/Tileset.png" type="Texture" id=2]
[ext_resource path="res://Scenes/StateMachine/StateMachine.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=6]
height = 35.0

[sub_resource type="Animation" id=7]
resource_name = "Attack_D"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 8 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Attack_L"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Attack_R"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 4 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Attack_U"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 12 ]
}

[sub_resource type="Animation" id=11]

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 34 ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 35 ]
}

[sub_resource type="Animation" id=16]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=17]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=18]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=19]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=20]

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Attack_D"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Attack_L"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Attack_R"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Attack_U"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Idle_D"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Idle_L"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Idle_R"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Idle_U"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Run_D"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Run_L"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Run_R"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Run_U"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Start"

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=52]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=56]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=57]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachine" id=66]
states/Attack_D/node = SubResource( 21 )
states/Attack_D/position = Vector2( 566, 307 )
states/Attack_L/node = SubResource( 22 )
states/Attack_L/position = Vector2( 328, 176 )
states/Attack_R/node = SubResource( 23 )
states/Attack_R/position = Vector2( 943, 176 )
states/Attack_U/node = SubResource( 24 )
states/Attack_U/position = Vector2( 702, 37 )
states/Idle_D/node = SubResource( 25 )
states/Idle_D/position = Vector2( 634, 241 )
states/Idle_L/node = SubResource( 26 )
states/Idle_L/position = Vector2( 492, 176 )
states/Idle_R/node = SubResource( 27 )
states/Idle_R/position = Vector2( 778, 176 )
states/Idle_U/node = SubResource( 28 )
states/Idle_U/position = Vector2( 634, 111 )
states/Run_D/node = SubResource( 29 )
states/Run_D/position = Vector2( 492, 241 )
states/Run_L/node = SubResource( 30 )
states/Run_L/position = Vector2( 407, 111 )
states/Run_R/node = SubResource( 31 )
states/Run_R/position = Vector2( 852, 241 )
states/Run_U/node = SubResource( 32 )
states/Run_U/position = Vector2( 778, 111 )
states/Start/node = SubResource( 33 )
states/Start/position = Vector2( 634, 176 )
transitions = [ "Start", "Idle_L", SubResource( 34 ), "Idle_L", "Start", SubResource( 35 ), "Start", "Idle_U", SubResource( 36 ), "Idle_U", "Start", SubResource( 37 ), "Start", "Idle_R", SubResource( 38 ), "Idle_R", "Start", SubResource( 39 ), "Idle_L", "Run_L", SubResource( 40 ), "Run_L", "Idle_L", SubResource( 41 ), "Idle_U", "Run_U", SubResource( 42 ), "Run_U", "Idle_U", SubResource( 43 ), "Idle_R", "Run_R", SubResource( 44 ), "Run_R", "Idle_R", SubResource( 45 ), "Idle_D", "Run_D", SubResource( 46 ), "Run_D", "Idle_D", SubResource( 47 ), "Start", "Idle_D", SubResource( 48 ), "Idle_D", "Start", SubResource( 49 ), "Attack_D", "Run_D", SubResource( 50 ), "Attack_L", "Run_L", SubResource( 51 ), "Attack_R", "Run_R", SubResource( 52 ), "Attack_U", "Run_U", SubResource( 53 ), "Attack_U", "Idle_U", SubResource( 54 ), "Attack_R", "Idle_R", SubResource( 55 ), "Attack_L", "Idle_L", SubResource( 56 ), "Attack_D", "Idle_D", SubResource( 57 ), "Idle_U", "Attack_U", SubResource( 58 ), "Idle_L", "Attack_L", SubResource( 59 ), "Run_L", "Attack_L", SubResource( 60 ), "Run_U", "Attack_U", SubResource( 61 ), "Idle_R", "Attack_R", SubResource( 62 ), "Run_R", "Attack_R", SubResource( 63 ), "Run_D", "Attack_D", SubResource( 64 ), "Idle_D", "Attack_D", SubResource( 65 ) ]
start_node = "Start"
graph_offset = Vector2( 0, 50.122 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=67]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.12549, 0.490196, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=5]

[node name="MainCharacter" type="KinematicBody2D" groups=[
"Character",
"Player",
]]
z_index = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0797025, 0.08 )
z_index = 3
texture = ExtResource( 2 )
vframes = 9
hframes = 4
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_D = SubResource( 7 )
anims/Attack_L = SubResource( 8 )
anims/Attack_R = SubResource( 9 )
anims/Attack_U = SubResource( 10 )
anims/Change = SubResource( 11 )
anims/Idle_D = SubResource( 12 )
anims/Idle_L = SubResource( 13 )
anims/Idle_R = SubResource( 14 )
anims/Idle_U = SubResource( 15 )
anims/Run_D = SubResource( 16 )
anims/Run_L = SubResource( 17 )
anims/Run_R = SubResource( 18 )
anims/Run_U = SubResource( 19 )
anims/Start = SubResource( 20 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 66 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 67 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StateMachine" parent="." instance=ExtResource( 3 )]

[node name="Clone" type="Node" parent="."]

[node name="Attack" type="Node2D" parent="."]

[node name="Pos" type="Node2D" parent="Attack"]
position = Vector2( 40, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="ControlBar" type="Control" parent="."]
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="ControlBar"]
margin_right = 40.0
margin_bottom = 8.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
